# flowspace

./: .dockerignore  .env.example  .gitignore  .impeccable.md  .npmignore  CLAUDE.md  DESIGN.md  Dockerfile  LICENSE  Makefile  PRODUCT.md  README.md  TODOS.md  docker-compose.yml  index.html  install.sh  metadata.json  package-lock.json  package.json  server.prod.ts  server.ts  tsconfig.json  vite.config.ts
.specify/memory/: constitution.md
demo/: README.md
demo/mock-server/: data.json  server.mjs
docs/: FlowSpace_Interview_Prep.html  FlowSpace_Technical_Report.html
docs/designs/: FlowSpace-Harness-Exploration-Enhancement-Plan.md  agent-harness-analysis.md  calendar-redesign.md  conversation-index-changelog.md  conversation-index-memo.md  conversation-summarization-memo.md  custom-skills-redesign.md  final_design_UI.md  flowspace-product-redesign.md  gmail-tab-enhancement.md  harness-improvement-spec.md  harness-improvement-tasks.md  harness-overview.md  harness-ship-readiness.md  phase3-design-spike.md  phase3-implementation-memo.md  workflow-studio-redesign.md
docs/plans/: architecture-current-vs-future.md  memory-system-plan.md  openclaw-memory-agent-v4-implementation.md  (+1 more)
scripts/: release.sh  synthesizer-eval.ts
specs/: plan.md
src/: App.tsx  globals.d.ts  index.css  tailwind.generated.css  tailwind.input.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
website/: .env.example  README.md  next.config.ts  package-lock.json  package.json
(+353 files in other folders)
