[package]
name = "flowspace"
version = "1.2.0"
description = "FlowSpace - Google Workspace Dashboard"
authors = ["FlowSpace"]
edition = "2021"

[lib]
name = "flowspace_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
